# rpi-hwmonitor-display

./: .gitignore  .template_env  README.md  config.tmpl.toml  hw_poller.py  hwmonitor.py  hwmonitorGUI.py  main.py  message_model.py  message_models.py  message_workers.py  poller.py  publisher.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  requirements_win.txt  setup_pubsub.sh  style.qss  subscriber.py  utils.py
.github/workflows/: run-tests.yml
data/: default_message.jsonc
extras/: requirements_rpi2.txt  setup_pubsub.sh
pubsub_utils/: __init__.py  hw_stats.py  monitoring.py  publisher.py  subscriber.py
tests/: conftest.py  test_hw_stats.py  test_hwmonitorGUI.py  test_publisher.py
transport/: __init__.py  base_publisher.py  exceptions.py  hw_stats.py  local_network_publisher.py  pubsub_publisher.py  pubsub_subscriber.py  subscriber.py
